added sub navigation to solutions

--- a/src/app/pages/solutions/our-solutions-page.component.html
+++ b/src/app/pages/solutions/our-solutions-page.component.html
@@ -15,7 +15,7 @@
             lectus tellus. Quisque vel hendrerit nisl. Praesent non felis non mauris suscipit vestibulum. Morbi
             malesuada velit eget nulla feugiat, ut blandit metus ultricies. Nam egestas porta metus, a ornare nibh
             pulvinar a. Nulla at mi ac augue tincidunt dictum eu eget metus.</p>
-          <a routerLink="bottlewashers">
+          <a routerLink="type/bottlewashers">
             <button class="orange-button">Read more</button>
           </a>
         </div>
@@ -26,7 +26,7 @@
             lectus tellus. Quisque vel hendrerit nisl. Praesent non felis non mauris suscipit vestibulum. Morbi
             malesuada velit eget nulla feugiat, ut blandit metus ultricies. Nam egestas porta metus, a ornare nibh
             pulvinar a. Nulla at mi ac augue tincidunt dictum eu eget metus.</p>
-          <a routerLink="filters">
+          <a routerLink="type/fillers">
             <button class="orange-button">Read more</button>
           </a>
         </div>
@@ -37,7 +37,7 @@
             lectus tellus. Quisque vel hendrerit nisl. Praesent non felis non mauris suscipit vestibulum. Morbi
             malesuada velit eget nulla feugiat, ut blandit metus ultricies. Nam egestas porta metus, a ornare nibh
             pulvinar a. Nulla at mi ac augue tincidunt dictum eu eget metus.</p>
-          <a routerLink="others">
+          <a routerLink="type/other">
             <button class="orange-button">Read more</button>
           </a>
         </div>
