--- a/src/app/pages/solutions/solutions-list-page/solutions-list-page.component.html
+++ b/src/app/pages/solutions/solutions-list-page/solutions-list-page.component.html
@@ -1,9 +1,10 @@
 <section id="solutions-list">
   <div class="list">
     <div class="header">
-      <h2 *ngIf="isBottleWashersPage()">Improve performance for your bottle washers</h2>
+      <h2>{{title}}</h2>
+      <!-- <h2 *ngIf="isBottleWashersPage()">Improve performance for your bottle washers</h2>
       <h2 *ngIf="isFiltersPage()">Improve performance for your filters</h2>
-      <h2 *ngIf="!isBottleWashersPage() && !isFiltersPage()">Improve performance for any other machine</h2>
+      <h2 *ngIf="!isBottleWashersPage() && !isFiltersPage()">Improve performance for any other machine</h2> -->
       <div class="search">
         <div class="input">
           <i class="material-icons">search</i>
