added nav indicator

--- a/src/app/components/navigation/desktop-navbar/desktop-navbar.component.html
+++ b/src/app/components/navigation/desktop-navbar/desktop-navbar.component.html
@@ -1,27 +1,26 @@
-<section id="desktop-navigation">
-    <div [@scroll]="navbarState" id="navigation">
-        <a routerLink="/home"><img id="logo" [src]="logoPath"></a>
+<section id="desktop-navigation"  [ngClass]="{'transparent': isTransparent}">
+    <div id="navigation" [ngClass]="{'transparent': isTransparent}">
+        <a routerLink="/home"><img id="logo" [src]="isTransparent ? logoHidePath : logoShowPath"></a>
         <ul>
             <li><a routerLink="/home" (click)="navigate()">Home</a></li>
             <li *ngFor="let link of links">
-                <a *ngIf="link.path && !link.children" [routerLink]="link.path" (click)="navigate()"> {{link.text}} </a>
-                <a *ngIf="link.children" (click)="toggleSubMenu(link)"> {{link.text}} </a>
+                <a *ngIf="link.path && !link.children"   routerLinkActive="active-link" [routerLink]="link.path" (click)="navigate()"> {{link.text}} </a>
+                <a *ngIf="link.children" (click)="toggleSubMenu(link)" [ngClass]="{'active-link': link === activeLink}"> {{link.text}} </a>
             </li>
             <li>
-                <app-language-picker [isTransparent]="navbarState === 'hide'"></app-language-picker>
+                <app-language-picker [isTransparent]="isTransparent"></app-language-picker>
             </li>
         </ul>
     </div>
 
-    <div *ngIf="chosenLink && chosenLink.children" class="sub-menu-desktop"
-         [ngClass]="{'open': subMenuOpen}">
+    <div *ngIf="chosenLink && chosenLink.children" class="sub-menu-desktop" [ngClass]="{'open': subMenuOpen}">
         <div class="sub-menu-desktop-description">
             <a [routerLink]="chosenLink.path" (click)="navigate()">{{chosenLink.text}}</a>
         </div>
 
         <div class="sub-menu-desktop-content">
             <p *ngFor="let child of chosenLink.children">
-                <a [routerLink]="child.path" (click)="navigate()">{{child.text}}</a>
+                <a [routerLink]="child.path"  routerLinkActive="active-link" (click)="navigate()">{{child.text}}</a>
             </p>
         </div>
     </div>
