--- a/src/app/pages/products/product-types/product-list-page/product-list.page.scss
+++ b/src/app/pages/products/product-types/product-list-page/product-list.page.scss
@@ -6,8 +6,6 @@
     background: url("../../../../../assets/images/people.jpg") center top;
   }
 
-
-
   .products {
     padding: 0 20px 20px 20px;
     h2 {
@@ -72,7 +70,7 @@
       @media screen and (min-width: 768px) {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
         flex-wrap: wrap;
       }
     }
