--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-  <img src="../../../assets/images/sticker_round.png" width="150px" height="150px">
+  <img src="../../../assets/images/sticker_round.png">
   <div class="footer-info">
     <p>
       New Crown Service Partners NV/SA
