--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -10,6 +10,12 @@ footer{
 
   img{
     padding: 2%;
+    width: 75px;
+    height: 75px;
+    @media (min-width: 768px) {
+      width: 150px;
+      height: 150px;
+    }
   }
 
   .footer-info{
