--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -9,19 +9,25 @@ footer{
   justify-content: space-between;
 
   img{
-    padding: 2%;
-    width: 75px;
-    height: 75px;
+    margin: 5px;
+    width: 100px;
+    height: 100px;
     @media (min-width: 768px) {
+      
       width: 150px;
       height: 150px;
     }
   }
 
   .footer-info{
+    font-size: 0.8em;
     flex-direction: column;
     display: inline-flex;
     justify-content: center;
-    padding: 20px;
+    margin: 10px;
+    @media (min-width: 768px) {
+      font-size: 1em;
+    }
+
   }
 }
