fixed index banner padding

--- a/src/app/pages/contact/contact.page.html
+++ b/src/app/pages/contact/contact.page.html
@@ -1,18 +1,17 @@
 <section id="contact">
-
-
     <div class="banner">
-        <h1>Contact Us</h1>
+        <div class="content">
+            <h1>Contact Us</h1>
+        </div>
     </div>
 
     <div class="contact-content">
-        <mat-card class="card-header">
-            <mat-card-header>
-                <h2>Contact us by mail</h2>
-            </mat-card-header>
-        </mat-card>
-
         <div class="contact-form">
+            <mat-card class="card-header">
+                <mat-card-header>
+                    <h2>Contact us by mail</h2>
+                </mat-card-header>
+            </mat-card>
             <mat-card>
                 <mat-card-content class="px-lg-5 pt-0">
 
