--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <app-mobile-navigation  *ngIf="isMobile"></app-mobile-navigation>
     <app-desktop-navbar *ngIf="!isMobile"></app-desktop-navbar>
 
-    <router-outlet></router-outlet>
+    <router-outlet (activate)="onActivate($event)"></router-outlet>
 
     <app-footer></app-footer>
 </section>
