Change code for build

--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -1,4 +1,4 @@
-<div class="solution-container" (click)="navigate()">
+<div class="solution-container">
   <a [routerLink]="['./', solution?.id]">
     <img src="../../../assets/images/beer_bottles_liten.jpg" />
     <div class="content">
