--- a/src/app/pages/page-not-found/page-not-found.page.html
+++ b/src/app/pages/page-not-found/page-not-found.page.html
@@ -1,3 +1,4 @@
-<p>
-  page-not-found works!
-</p>
+<section id="not-found">
+  <h1>404 - Page not found</h1>
+  <p>Oops... Seems that something went wrong!</p>
+</section>
