Completing admin panel layout

--- a/src/app/pages/cms/login/login.component.scss
+++ b/src/app/pages/cms/login/login.component.scss
@@ -1,5 +1,6 @@
 @import "../../../../assets/variables";
 #cms-login {
+    z-index: 1000;
     height: 100vh;
     width: 100vw;
     background-size: cover !important;
