Add logout button

--- a/src/app/components/navigation/admin-navigation/admin-navigation.component.html
+++ b/src/app/components/navigation/admin-navigation/admin-navigation.component.html
@@ -40,12 +40,22 @@
         </div>
       </a>
     </li>
-    <li>
+    <li class="news">
       <a routerLink="news">
         <div class="menu-link" (click)="clickURL()">
           <span class="text">News</span>
           <i class="material-icons">
             announcement
+          </i>
+        </div>
+      </a>
+    </li>
+    <li class="bottom-link">
+      <a routerLink="/logout">
+        <div class="menu-link" (click)="clickURL()">
+          <span class="text">Logout</span>
+          <i class="material-icons">
+            exit_to_app
           </i>
         </div>
       </a>
