--- a/src/app/pages/cms/login/login.component.html
+++ b/src/app/pages/cms/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="card"></div>
     <div class="card">
       <h1 class="title">Login</h1>
-      <form>
+      <form (ngSubmit)="submit()">
         <div class="input-container">
           <input type="text" id="username" required="required" />
           <label for="username">Username</label>
