--- a/src/app/components/navigation/admin-navigation/admin-navigation.component.scss
+++ b/src/app/components/navigation/admin-navigation/admin-navigation.component.scss
@@ -112,8 +112,8 @@ $hamburger-height: 30px;
     transition: all 0.3s ease-in-out;
     box-shadow: 2px 0px 10px 0px rgba(0,0,0,0.5);
     @media screen and (min-width: 768px) {
-        width: 25%;
-        left: calc(-25% + 52px);
+        width: 30%;
+        left: calc(-30% + 52px);
     }
 
     &.visible {
@@ -126,11 +126,12 @@ $hamburger-height: 30px;
         padding: 0;
         height: 100%;
         li {
-            border-top: 1px solid black;
+            margin-bottom: 15px;
+            //border-top: 1px solid black;
             &:nth-child(1) {
                 margin-top: 15px;
                 margin-bottom: 30px;
-                border-bottom: 1px solid black;
+                //border-bottom: 1px solid black;
                 
                 @media screen and (min-width: 768px) {
                     margin-bottom: 50px;
@@ -139,8 +140,11 @@ $hamburger-height: 30px;
                     }
                 }
             }
-            &:last-child, &.news{
+            /*&:last-child, &.news{
                 border-bottom: 1px solid black;
+            }*/
+            &:last-child {
+                margin-bottom: 0;
             }
 
             width: 100%;
@@ -151,9 +155,9 @@ $hamburger-height: 30px;
                 text-decoration: none;
                 font-weight: bold;
                 font-size: 20px;
-                @media screen and (min-width: 768px) {
+                //@media screen and (min-width: 768px) {
                   font-size: 32px;
-                }
+                //}
                 .menu-link {
                     &:hover {
                         text-shadow: 2px 2px 2px rgba(1, 1, 1, 0.5);
@@ -169,9 +173,9 @@ $hamburger-height: 30px;
                     }
 
                     i {
-                        @media screen and (min-width: 768px) {
+                        //@media screen and (min-width: 768px) {
                             font-size: 32px;
-                        }
+                        //}
                         border-left: 1px dashed black;
                         padding-left: 10px;
                         padding-right: 10px;
