Edit modes for products and solutions

--- a/src/app/pages/cms/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/pages/cms/dashboard/dashboard-home/dashboard-home.component.html
@@ -1,3 +1,29 @@
-<p>
-  dashboard-home works!
-</p>
+<section id="dashboard-home">
+  <h1>Welcome back!</h1>
+  <div class="shortcuts">
+    <a routerLink="/admin/products">
+      <div class="option">
+        <i class="material-icons">
+          shop
+        </i>
+        <span>46 products</span>
+      </div>
+    </a>
+    <a routerLink="/admin/solutions">
+      <div class="option">
+        <i class="material-icons">
+          build
+        </i>
+        <span>21 solutions</span>
+      </div>
+    </a>
+    <a routerLink="/admin/news">
+      <div class="option">
+        <i class="material-icons">
+          announcement
+        </i>
+        <span>9 news posts</span>
+      </div>
+    </a>
+  </div>
+</section>
