--- a/src/app/pages/cms/dashboard/dashboard-products/dashboard-products.component.html
+++ b/src/app/pages/cms/dashboard/dashboard-products/dashboard-products.component.html
@@ -1,3 +1,297 @@
-<p>
-  dashboard-products works!
-</p>
+<section id="admin-products">
+  <h1>Products</h1>
+  <p>Overview of the products that are currently in the system. Click the button below to add a new product, or use the
+    icons to edit and/or delete a product.</p>
+  <a class="router-button" routerLink="add">
+    <button class="orange-button">
+      <span>Add new product</span>
+      <i class="material-icons">add</i>
+    </button>
+  </a>
+  <table>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Solution</th>
+      <th></th>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td>123</td>
+      <td>Example</td>
+      <td>Example</td>
+      <td class="edit">
+        <a [routerLink]="['edit', 1]">
+          <i class="material-icons">
+            create
+          </i>
+        </a>
+        <i class="material-icons" (click)="showModal()">
+          delete_sweep
+        </i>
+      </td>
+    </tr>
+  </table>
+</section>
+<app-dashboard-modal *ngIf="isModalShown">
+  <h1>Are you sure?</h1>
+  <p>Do you really want to delete product 'PRODUCTNAME'? This product will permanently be deleted from your system.</p>
+  <div class="buttons">
+    <button class="orange-button" (click)="cancel()">No</button>
+    <button class="orange-button" (click)="delete()">Yes</button>
+  </div>
+</app-dashboard-modal>
