--- a/src/app/pages/cms/dashboard/admin.component.scss
+++ b/src/app/pages/cms/dashboard/admin.component.scss
@@ -1,5 +1,7 @@
 #admin {
     .admin-content {
+        //min-height: 100%;
+        overflow: scroll;
         padding: 80px 40px 40px 82px;
 
         @media screen and (max-width: 768px) {
@@ -12,7 +14,8 @@
     }
 }
 .background-image {
-    position: absolute;
+    z-index: -1;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
