Add PHP functionality

--- a/src/app/components/navigation/admin-navigation/admin-navigation.component.html
+++ b/src/app/components/navigation/admin-navigation/admin-navigation.component.html
@@ -40,7 +40,17 @@
         </div>
       </a>
     </li>
-    <li class="news">
+    <li>
+      <a routerLink="solutions">
+        <div class="menu-link" (click)="clickURL()">
+          <span class="text">Links</span>
+          <i class="material-icons">
+            link
+          </i>
+        </div>
+      </a>
+    </li>
+    <li>
       <a routerLink="news">
         <div class="menu-link" (click)="clickURL()">
           <span class="text">News</span>
