--- a/src/app/pages/cms/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/pages/cms/dashboard/dashboard-home/dashboard-home.component.html
@@ -17,12 +17,12 @@
         <span>21 solutions</span>
       </div>
     </a>
-    <a routerLink="/admin/news">
+    <a routerLink="/admin/links">
       <div class="option">
         <i class="material-icons">
-          announcement
+          link
         </i>
-        <span>9 news posts</span>
+        <span>4 secret links</span>
       </div>
     </a>
   </div>
