Copy to clipboard + generate urls page

--- a/src/app/components/navigation/admin-navigation/admin-navigation.component.html
+++ b/src/app/components/navigation/admin-navigation/admin-navigation.component.html
@@ -41,7 +41,7 @@
       </a>
     </li>
     <li>
-      <a routerLink="solutions">
+      <a routerLink="urls">
         <div class="menu-link" (click)="clickURL()">
           <span class="text">Links</span>
           <i class="material-icons">
