--- a/src/app/pages/cms/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/pages/cms/dashboard/dashboard-home/dashboard-home.component.html
@@ -17,7 +17,7 @@
         <span>21 solutions</span>
       </div>
     </a>
-    <a routerLink="/admin/links">
+    <a routerLink="/admin/urls">
       <div class="option">
         <i class="material-icons">
           link
