--- a/src/app/pages/cms/dashboard/dashboard-urls/dashboard-urls.component.html
+++ b/src/app/pages/cms/dashboard/dashboard-urls/dashboard-urls.component.html
@@ -8,8 +8,8 @@
       <th></th>
     </tr>
     <tr *ngFor="let url of urls">
-      <td>{{url?.id}}</td>
-      <td>{{url?.name}}</td>
+      <td>{{url?.productid}}</td>
+      <td>{{url?.productname}}</td>
       <td class="edit">
         <i class="material-icons" (click)="copyURL(url?.url)">
           link
@@ -25,7 +25,7 @@
 </section>
 <app-dashboard-modal *ngIf="isModalShown">
   <h1>Are you sure?</h1>
-  <p>Do you really want to delete the secret url of {{urlToDelete?.name}}? The URL will permanently be deleted from your system.</p>
+  <p>Do you really want to delete the secret url of {{urlToDelete?.productname}}? The URL will permanently be deleted from your system.</p>
   <div class="buttons">
     <button class="orange-button" (click)="cancel()">No</button>
     <button class="orange-button" (click)="delete()">Yes</button>
