--- a/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
+++ b/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
@@ -1,7 +1,8 @@
 @import "../../../../assets/variables";
 $hamburger-width: 30px;
 $hamburger-height: 30px;
-$image-size: 125px;
+$image-height: 75px;
+$image-width: 100px;
 
 section#navigation-container {
   z-index: 100;
@@ -15,6 +16,7 @@ section#navigation-container {
   align-items: center;
 
   div#navigation {
+
     height: $nav-bar-height;
     display: flex;
     flex-direction: row;
@@ -33,9 +35,9 @@ section#navigation-container {
     }
 
     img#logo {
-      padding: 5%;
-      width: $image-size;
-      height: 100px;
+      margin-left: 10px;
+      height: $image-height;
+      width: $image-width;
     }
 
     div#hamburger-menu {
