--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -1,51 +1,37 @@
 <section id="landing-page">
 
-    <div class="index-banner">
+    <div class="index-banner" #banner>
         <div class="welcome-text">
             Global Experts in RGB
             <p class="sub-title">
                 We give your machine a second life
             </p>
         </div>
-        <div class="welcome-button" routerLink="/company/about">
+        <div class="welcome-button" (click)="scrollToVision()" >
             Learn more about us
             <span class="icon ion-ios-arrow-forward"></span>
         </div>
     </div>
 
-    <div class="article">
-        <p>
-            text is:  {{'welcome_text' | translate}}
-        </p>
+    <scroll-button [scrollDown]="scrollDown" (onScroll)="scroll()"></scroll-button>
 
+    <!--<div class="article">-->
+        <!--<p>-->
+            <!--text is:  {{'welcome_text' | translate}}-->
+        <!--</p>-->
+    <!--</div>-->
+
+    <div #ourVision class="article">
+        <app-our-vision></app-our-vision>
     </div>
 
-    <div class="article">
-        <p>
-            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
-            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
-            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
-            In pri natum appetere consectetuer, iusto salutatus id vix.
-            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
-            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
-            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
-            In pri natum appetere consectetuer, iusto salutatus id vix.
-        </p>
-
+    <div #whoWeAre class="article" >
+        <app-who-we-are></app-who-we-are>
     </div>
 
-    <div class="article">
-        <p>
-            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
-            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
-            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
-            In pri natum appetere consectetuer, iusto salutatus id vix.
-            Lorem ipsum dolor sit amet, wisi discere te sed, mei prompta sapientem ut.
-            Libris deseruisse repudiandae te usu, sed in malis soleat concludaturque.
-            Sea cu elitr integre delenit. Legimus mediocritatem an nec, ei sit adipisci disputando.
-            In pri natum appetere consectetuer, iusto salutatus id vix.
-        </p>
-
+    <div #ourApproach class="article">
+        <app-approach></app-approach>
     </div>
+
 
 </section>
