--- a/src/app/pages/company/our-vision-section/our-vision.page.html
+++ b/src/app/pages/company/our-vision-section/our-vision.page.html
@@ -1,5 +1,5 @@
 <article id="vision">
-    <h1>Our Vision</h1>
+    <h1>YOU DON'T NEED A NEW MACHINE, YOU NEED YOUR MACHINE TO WORK PROPERLY</h1>
 
 
     Lorem ipsum dolor sit amet, alii meliore honestatis eum ex, ad cetero verear eum. Fierent prodesset at mei, ea ius eruditi elaboraret, in sumo nostrud est. Id latine necessitatibus eum. Oblique discere necessitatibus sed ei, ad mel sint cibo placerat, comprehensam necessitatibus ad pro. Ne vel dico harum adolescens, rationibus appellantur at vel, tollit saperet invidunt usu ex.
