added spacing to pages

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="page">
   <img src="../../../assets/images/sticker_round.png" width="150px" height="150px">
   <div class="footer-info">
     <p>
@@ -11,7 +11,7 @@
           Gansbroekstraat 27
         </td>
         <td>
-          Tel +2 3 434 92 69
+          Tel +32 3 434 92 69
         </td>
       </tr>
 
