--- a/src/app/pages/contact/contact.page.html
+++ b/src/app/pages/contact/contact.page.html
@@ -8,11 +8,13 @@
     <div class="contact-content">
         <div class="contact-form">
 
-
-            <mat-card>
+            <mat-card class="card-header">
                 <mat-card-header>
                     <h2>Contact us by mail</h2>
                 </mat-card-header>
+            </mat-card>
+
+            <mat-card>
                 <mat-card-content class="px-lg-5 pt-0">
 
                     <form #form method="post" style="color: #757575;" [formGroup]="contactForm">
@@ -82,7 +84,7 @@
                                 </th>
                             </tr>
                             <tr>
-                                <td>  Tel +2 3 434 92 69</td>
+                                <td>  Tel +32 3 434 92 69</td>
                             </tr>
                         </table>
                     </div>
