--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -1,6 +1,6 @@
 <section id="landing-page">
 
-    <div class="index-banner" #banner>
+    <div class="index-banner page" #banner>
         <div class="welcome-text">
             Global Experts in RGB
         </div>
@@ -54,7 +54,7 @@
     </div>
 
     <div #whoWeAre class="article">
-        <h2>THE ORIGINS OF THE CROWN</h2>
+        <h2 class="centered">THE ORIGINS OF THE CROWN</h2>
 
         <p>NEW CROWN Service Partners NV was founded in October 2017 by two former employees and acquired the
             intellectual property and trade fund of CROWN-BAELE, who was declared bankrupt a month before.
