--- a/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
+++ b/src/app/components/navigation/mobile-navigation/mobile-navigation.component.scss
@@ -10,7 +10,6 @@ section#navigation-container {
   left: 0;
   right: 0;
   position: fixed;
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,6 +20,7 @@ section#navigation-container {
     display: flex;
     flex-direction: row;
     width: 100%;
+    padding:  0 10%;
     align-items: center;
     background-color: white;
     justify-content: space-between;
