--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -76,21 +76,22 @@ section#landing-page {
   }
 
   .article {
-    padding: 2%;
+    padding: 2% 10%;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    min-height: 25vh;
     background-color: white;
     text-align: center;
 
 
     &.image-banner{
+      min-height: 25vh;
+      max-height: 25vh;
       img {
+        min-height: 100%;
         margin: 10px 0;
         min-width: 100%;
         display: block;
-        max-height: 25vh;
       }
     }
 
@@ -98,7 +99,6 @@ section#landing-page {
       img{
         display: block;
         width: 100%;
-        max-height: 25vh;
       }
     }
 
@@ -136,7 +136,7 @@ section#landing-page {
 
     h1 {
       text-align: center;
-      font-size: 1.5em;
+      font-size: 2.5em;
     }
 
     .goal-container {
@@ -180,7 +180,7 @@ section#landing-page {
     }
 
     .article {
-
+    text-align: left;
       &.image-text{
         display: flex;
         flex-direction: row;
@@ -189,7 +189,7 @@ section#landing-page {
           img{
             display: inline-block;
             float: right;
-            padding: 10%;
+            padding:  0  0 0 10%;
             width: 50%;
             max-height: 25vh;
           }
@@ -197,6 +197,7 @@ section#landing-page {
       &:nth-child(even) {
         img{
           display: inline-block;
+          padding:  0 10% 0 0;
         }
       }
       .logo-history {
