--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -1,29 +1,55 @@
 @import "../../../../assets/variables";
+
 .product-container {
+  width: 100%;
+  max-width: 300px;
+  box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+  transition: all .2s ease-in-out;
+
+  &:hover {
+    transform: scale(1.025);
+    cursor: pointer;
+  }
+
+  img {
+    height: auto;
     width: 100%;
-    max-width: 300px;
-    box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 30px;
-    transition: all .2s ease-in-out;
+  }
 
-    &:hover {
-        transform: scale(1.025);
-        cursor: pointer;
+  .label {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 5px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+
+    &.bottle-washers {
+      background-color: $main-color;
     }
 
-    img {
-        height: auto;
-        width: 100%;
+    &.fillers {
+      background-color: $main-color;
     }
 
-    .content {
-        padding: 10px;
-        text-align: center;
-        h2 {
-            margin-top: 0px;
-            color: $main-color;
-        }
+    &.others {
+      background-color: $main-color;
     }
+
+
+  }
+
+  .content {
+    padding: 10px;
+    text-align: center;
+
+    h2 {
+      margin-top: 0;
+      color: $main-color;
+    }
+  }
 }
