--- a/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.html
+++ b/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.html
@@ -19,51 +19,51 @@
           <mat-tab-group mat-align-tabs="center">
             <mat-tab label="Purpose">
               <div class="details">
-                <h1>Purpose of {{product?.name}}</h1>
-                <p>
-                  {{product?.purpose}}
-                </p>
+                <!--<h1>Purpose of {{product?.name}}</h1>-->
+                <!--<p>-->
+                  <!--{{product?.purpose}}-->
+                <!--</p>-->
               </div>
             </mat-tab>
             <mat-tab label="Scope">
               <div class="details">
-                <h1>Scope of {{product?.name}}</h1>
-                <p>
-                  {{product?.scope}}
-                </p>
+                <!--<h1>Scope of {{product?.name}}</h1>-->
+                <!--<p>-->
+                  <!--{{product?.scope}}-->
+                <!--</p>-->
               </div>
             </mat-tab>
             <mat-tab label="Options">
               <div class="details">
-                <h1>Options of {{product?.name}}</h1>
-                <p>
-                  {{product?.options}}
-                </p>
+                <!--<h1>Options of {{product?.name}}</h1>-->
+                <!--<p>-->
+                  <!--{{product?.options}}-->
+                <!--</p>-->
               </div>
             </mat-tab>
 
             <mat-tab label="Specs">
               <div class="details">
-                <h1>Specs of {{product?.name}}</h1>
-                <p>
-                  {{product?.specs}}
-                </p>
+                <!--<h1>Specs of {{product?.name}}</h1>-->
+                <!--<p>-->
+                  <!--{{product?.specs}}-->
+                <!--</p>-->
               </div>
             </mat-tab>
             <mat-tab label="Principle">
               <div class="details">
-                <h1>Principle of {{product?.name}}</h1>
-                <p>
-                  {{product?.principle}}
-                </p>
+                <!--<h1>Principle of {{product?.name}}</h1>-->
+                <!--<p>-->
+                  <!--{{product?.principle}}-->
+                <!--</p>-->
               </div>
             </mat-tab>
             <mat-tab label="Set Up">
               <div class="details">
-                <h1>Set Up of {{product?.name}}</h1>
-                <p>
-                  {{product?.setup}}
-                </p>
+                <!--<h1>Set Up of {{product?.name}}</h1>-->
+                <!--<p>-->
+                  <!--{{product?.setup}}-->
+                <!--</p>-->
               </div>
             </mat-tab>
           </mat-tab-group>
