--- a/src/app/pages/products/product.page.html
+++ b/src/app/pages/products/product.page.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<section class="product-page">
+    <div class="banner">
+        <h1>Our products</h1>
+    </div>
+
+   <app-product-list [products]="products"></app-product-list>
+
+
+</section>
