--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -8,48 +8,70 @@
   flex-direction: column;
   margin-bottom: 30px;
   transition: all .2s ease-in-out;
+  position: relative;
 
   &:hover {
     transform: scale(1.025);
     cursor: pointer;
   }
 
-  img {
-    height: auto;
-    width: 100%;
+  .product-header {
+    position: relative;
+    img {
+      height: auto;
+      width: 100%;
+    }
+
+    .label {
+      box-shadow: 0 0 3px #ccc;
+      text-align: center;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      margin: 10px;
+      border-radius: 4px;
+      width: 25%;
+      color: white;
+      text-transform: uppercase;
+      font-weight: bold;
+      background-color: $main-color;
+
+      &.bottle-washers {
+        background-color: $main-color;
+      }
+
+      &.fillers {
+        background-color: $main-color;
+      }
+
+      &.others {
+        background-color: $main-color;
+      }
+    }
+
   }
 
-  .label {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    margin: 5px;
-    color: white;
-    text-transform: uppercase;
-    font-weight: bold;
-
-    &.bottle-washers {
-      background-color: $main-color;
-    }
-
-    &.fillers {
-      background-color: $main-color;
-    }
-
-    &.others {
-      background-color: $main-color;
-    }
-
-
-  }
-
-  .content {
-    padding: 10px;
+  .product-content {
+    padding: 5px;
+    min-height: 200px;
+    max-height: 200px;
     text-align: center;
-
+    overflow: hidden;
+    text-overflow: ellipsis;
     h2 {
       margin-top: 0;
       color: $main-color;
     }
+
+    p {
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+  }
+
+  .product-footer {
+    text-align: center;
+    padding: 10px;
+    box-shadow: 0 0 3px #ccc;
   }
 }
