--- a/src/app/components/products/product-list/product-list.page.html
+++ b/src/app/components/products/product-list/product-list.page.html
@@ -1,11 +1,4 @@
-<section id="product-list">
-    <div class="banner">
-        <div class="content">
-            <h1 *ngIf="isCrownBaelePage()">Crown-Baele parts</h1>
-            <h1 *ngIf="!isCrownBaelePage()">Third-party parts</h1>
-        </div>
-    </div>
-
+<section id="product-list" class="page">
     <div class="products">
         <div class="header">
             <h2>Please select a part for more information</h2>
@@ -18,8 +11,7 @@
             </div>
         </div>
         <div class="content">
-            <router-outlet name="product-categorie"></router-outlet>
-            <app-product [product]="product" *ngFor="let product of products"></app-product>
+            <app-product *ngFor="let product of products" [product]="product"></app-product>
         </div>
     </div>
 </section>
