--- a/src/app/components/products/product-list/product-list.page.scss
+++ b/src/app/components/products/product-list/product-list.page.scss
@@ -1,12 +1,10 @@
-@import "../../../../../assets/variables";
+@import "../../../../assets/variables";
 
 #product-list {
   margin-top: $nav-bar-height;
   .banner {
-    background: url("../../../../../assets/images/people.jpg") center top;
+    background: url("../../../../assets/images/people.jpg") center top;
   }
-
-
 
   .products {
     padding: 0 20px 20px 20px;
@@ -72,7 +70,7 @@
       @media screen and (min-width: 768px) {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-evenly;
         flex-wrap: wrap;
       }
     }
