--- a/src/app/pages/products/parts/parts.component.html
+++ b/src/app/pages/products/parts/parts.component.html
@@ -1,6 +1,37 @@
-<div class="banner">
-  <div class="content">
-    <h1>Our Company</h1>
-    <h2>What is our story?</h2>
-  </div>
-</div>
+<section class="parts-page">
+    <div class="banner">
+        <h1>Parts</h1>
+    </div>
+
+    <div class="article">
+        <h1>PARTS FOR CROWN-BAELE MACHINES</h1>
+        <p>NEW CROWN is the exclusive and sole original manufacturer of spare parts and assemblies for all CROWN-BAELE
+            machines. Every enquiry for spare parts goes through the hands of our engineering team. Manufacturing
+            methods change and evolve continuously, and we make sure the parts are made according to the latest
+            standards in terms of quality, durability and safety.
+        </p>
+    </div>
+    <div class="article image-banner">
+        <img src="../../../../assets/images/default-placeholder.jpg">
+    </div>
+
+    <div class="article">
+        <h1>PARTS FOR THIRD PARTY MACHINES</h1>
+        <p>Throughout the history, many companies where related to or even part of the CROWN group for a while, such as
+            Ortmann & Herbst, Kettner, Gangloff and others. NEW CROWN therefore owns the drawings and technical
+            specifications of a large number of parts for machines of these brands and can offer these at very
+            interesting conditions.
+        </p>
+
+    </div>
+
+    <div class="article">
+        <h1>REVERSE ENGINEERED PARTS</h1>
+        <p>NEW CROWN offers services and maintenance on machines of all brands, which makes reverse engineering
+            necessary. By reverse engineering parts of third-party equipment, we analyze eventual weak points and
+            improve the execution of the part. Not only to improve durability or sustainability, but also to make
+            maintenance easier, or more cost effective.</p>
+    </div>
+
+    <app-product-list [products]="parts"></app-product-list>
+</section>
