--- a/src/app/pages/products/product.page.scss
+++ b/src/app/pages/products/product.page.scss
@@ -1,5 +1,25 @@
+@import "../../../assets/variables";
 .product-page{
   .banner {
     background: url('../../../assets/images/default-placeholder.jpg') center center;
+  }
+
+  ::ng-deep app-slide-side-navigation {
+    a {
+      cursor: pointer;
+      color: black;;
+      text-decoration: none;
+    }
+    ul {
+      padding: 0;
+      list-style: none;
+      li {
+        padding: 10px 0;
+      }
+    }
+    h1 {
+      font-size: 1.5em;
+      color: $main-color;
+    }
   }
 }
